# saas-openenv-audit

./: .env.example  .gitignore  ARCHITECTURE.md  Blog.md  Dockerfile  EnvAudit_SFT_Training.ipynb  README.md  agent_client.py  app.py  client.py  environment.py  final-grpo.ipynb  generate_sft_data.py  graders.py  inference.py  mock_env.py  openenv.yaml  pyproject.toml  requirements.txt  scenarios.py  train.py
envaudit-frontend/: index.html  package-lock.json  package.json  vite.config.js
envaudit-frontend/src/: App.jsx  EnvAuditDashboard.jsx
server/: app.py  client.py  environment.py  graders.py  models.py  schemas.py
