[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "saas-openenv-audit"
version = "1.0.0"
description = "EnvAudit: Corporate SaaS Red-Teaming Environment"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "openenv-core",
    "pydantic>=2.0",
    "requests",
    "openai",
    "python-dotenv"
]

[project.scripts]
server = "server.app:main"