[project]
name = "envaudit"
version = "1.0.0"
description = "EnvAudit: Corporate Saas Licence Auditor Environment"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.0.0",
    "requests>=2.31.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "httpx>=0.27.0"
]